--- a/projects.html
+++ b/projects.html
@@ -161,6 +161,7 @@
             <div style='width:100vw;height:500px;position:absolute;'></div>
             <h1 class='body_heading' style='width:500px;'>Gotcha!</h1>
             <p class='body_p'>A website/webapp for an on-campus game of Gotcha (AKA Assassins). Allows participants to register with the site and submit reports that are handled automatically. This was one of my first web projects, and as such, manifested itself as a sloppy mess of Python and PHP without any frameworks involved. However, it works well and is worth showing.</p>
+            <p style='position:relative;z-index:99;text-align:center;font-weight:bold;'><a target="_blank" href='https://github.com/limekiller/gotcha'>Check it out!</a></p>
             <ul class='body_p' style='margin-top:20px;padding-bottom:50px;'><strong>Features:</strong>
                 <li>Login and Registration system</li>
                 <li>Submit and automatically handle reports</li>
@@ -169,6 +170,9 @@
             </ul>
             <div class='photo_container'onclick='spoiler(this)'>
                 <p class='photo_container_icon'>+</p>
+                <img src='./images/g.png' />
+                <img src='./images/g2.png' />
+                <img src='./images/g3.png' />
             </div>
             <hr />
         </div>
@@ -209,6 +213,7 @@
             <div style='width:100vw;height:500px;position:absolute;'></div>
             <h1 class='body_heading' style='width:500px;'>Cards Against Humanity</h1>
             <p class='body_p'>A pretty nifty LAN-enabled multiplayer Cards game, right in the terminal. Requires no dependencies, being implemented purely through the Python socket library.</p>
+            <p style='position:relative;z-index:99;text-align:center;font-weight:bold;'><a target="_blank" href='https://www.github.com/limekiller/cards-against-humanity'>Check it out!</a></p>
             <ul class='body_p' style='margin-top:20px;padding-bottom:50px;'><strong>Features:</strong>
                 <li>Search for games on local network</li>
                 <li>Integrated instant chat for players</li>
@@ -233,6 +238,7 @@
             <div style='width:100vw;height:500px;position:absolute;'></div>
             <h1 class='body_heading' style='width:500px;'>Homeboard</h1>
             <p class='body_p'>An open-source Google-integrated dashboard for your home. I wanted a way to see all of my apartment-mates' schedules at once, and figured it was the perfect way to learn Flask. Homeboard is a webapp that allows you to login with your Google account, and displays your Calendar, Google Drive documents, breaking news headlines, local weather, and the time.</p>
+            <p style='position:relative;z-index:99;text-align:center;font-weight:bold;'><a target="_blank" href='https://www.github.com/limekiller/homeboard'>Check it out!</a></p>
             <ul class='body_p' style='margin-top:20px;padding-bottom:50px;'><strong>Features:</strong>
                 <li>Movable and resizable widgets</li>
                 <li>Save boards between sign-ins</li>
@@ -254,6 +260,7 @@
             <div style='width:100vw;height:500px;position:absolute;'></div>
             <h1 class='body_heading' style='width:500px;'>BENK Media Server</h1>
             <p class='body_p'>A simple media server that stores, streams, and downloads media with ease. Although many media server solutions exist, I wanted something that would let me not only store media, but easily download and stream it as well, a la Exodus for Kodi (but better).</p>
+            <p style='position:relative;z-index:99;text-align:center;font-weight:bold;'><a target="_blank" href='https://www.github.com/limekiller/benk-media-server'>Check it out!</a></p>
             <ul class='body_p' style='margin-top:20px;padding-bottom:50px;'><strong>Features:</strong>
                 <li>Upload and store files</li>
                 <li>Create, rename, and delete files and folders</li>
@@ -278,6 +285,7 @@
             <div style='width:100vw;height:500px;position:absolute;'></div>
             <h1 class='body_heading' style='width:500px;'>Cookie Monster</h1>
             <p class='body_p'>An incredibly bare-bones implementation of QTBrowser with PyQT, that periodically and quietly clears cookies automatically for uninterrupted New York Times and Washington Post reading (or any site that restricts access through cookies).</p>
+            <p style='position:relative;z-index:99;text-align:center;font-weight:bold;'><a target="_blank" href='https://www.github.com/limekiller/cookie-monster'>Check it out!</a></p>
             <ul class='body_p' style='margin-top:20px;padding-bottom:50px;'><strong>Features:</strong>
                 <li>Front-end splash screen to easily access sites</li>
                 <li>Browse without cookies!</li>
