--- a/squirrelly/index.html
+++ b/squirrelly/index.html
@@ -36,7 +36,7 @@
             </div>
         </div>
         <button onClick='window.location.href="squirrelly.zip"'>Download for Windows</button>
-        <button>Download for Mac</button>
+        <!--<button>Download for Mac</button>-->
         <p>Simply unzip to a folder and play!</p>
     </div>
 </body>
