--- a/contact.html
+++ b/contact.html
@@ -21,6 +21,6 @@
             <a href='https://www.youtube.com/user/StoneRainStudios'><img class='contact_button' src='youtube.png' /></a>
             <a href='https://www.github.com/limekiller'><img class='contact_button' src='github.png' /></a>
         </div>
-        <div style="text-align:center;"><p style='margin:0;margin-top:50px;'>Or email me at:</p><h1 style='margin:0;padding-bottom:50px;'>me@bryceyoder.com</h1></div>
+        <div style="text-align:center;"><p style='margin:0;margin-top:50px;'>Or email me at:</p><h1 style='margin:0;padding-bottom:50px;'><a href="mailto:me@bryceyoder.com">me@bryceyoder.com</a></h1></div>
     </div>
 </body>
