--- a/squirrelly/index.html
+++ b/squirrelly/index.html
@@ -32,7 +32,7 @@
                 </ul>
             </div>
             <div id='video'>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/PkTeMxAbagE" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                <iframe id='video_iframe' width="560" height="315" src="https://www.youtube.com/embed/PkTeMxAbagE" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
             </div>
         </div>
         <button onClick='window.location.href="squirrelly.zip"'>Download for Windows</button>
