Add animations, images, update font

--- a/contact.html
+++ b/contact.html
@@ -4,12 +4,13 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 	<link rel="stylesheet" type="text/css" href="styles.css">
+    <script type="text/javascript" src="global.js"></script>
 </head>
 
 <body>
     <div id='page_select'>
-        <a href='about.html'>About</a>|
-        <a href='projects.html'>Projects</a>
+        <a href='javascript:goToURL("about.html")'>About</a>|
+        <a href='javascript:goToURL("projects.html")'>Projects</a>
     </div>
     <h1 class='page_heading'>Contact</h1>
     <div class='body_container'>
