--- a/about.html
+++ b/about.html
@@ -4,12 +4,13 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 	<link rel="stylesheet" type="text/css" href="styles.css">
+    <script type="text/javascript" src="global.js"></script>
 </head>
 
 <body>
     <div id='page_select'>
-        <a href='projects.html'>Projects</a>|
-        <a href='contact.html'>Contact</a>
+        <a href='javascript:goToURL("projects.html")'>Projects</a>|
+        <a href='javascript:goToURL("contact.html")'>Contact</a>
     </div>
     <h1 class='page_heading'>ABOUT</h1>
     <span class='page_subhead'><a class='exlink' href='https://www.github.com/limekiller'>GitHub</a> | <a class='exlink' href='https://www.youtube.com/channel/UCjfpZEuhd5bzGf-TFdnCwpg'>YouTube</a></span>
