--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 	<header id='home_container'>
         <h1 id='name'></h1>
 		<h1 style='color:black;'>BRYCE YODER</h1>
-        <h5 id='subhead'>Programming and Graphic Design<hr /></h1>
-        <br />
+        <h5 id='subhead'>Programming and Graphic Design</h1>
+        <hr />
 		<div id='home_menu'>
             <span class='home-menu-item'><a href='about.html'>About</a></span>	
             <span class='home-div-1'>|</span>
