Add animations with deferred loading

--- a/squirrelly/index.html
+++ b/squirrelly/index.html
@@ -35,7 +35,7 @@
                 <iframe id='video_iframe' width="560" height="315" src="https://www.youtube.com/embed/PkTeMxAbagE" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
             </div>
         </div>
-        <button onClick='window.location.href="squirrelly.zip"'>Download for Windows</button>
+        <button onClick='window.location.href="Squirrelly_Win.zip"'>Download for Windows</button>
         <button>Download for Mac</button>
         <p>Simply unzip to a folder and play!</p>
     </div>
