Improve UI for mobile, add scripts to upload changes to Squirrelly leaderboards

--- a/projects.html
+++ b/projects.html
@@ -9,8 +9,8 @@
 
 <body>
     <div id='page_select'>
-        <a href='javascript:goToURL("about.html")'>About</a>|
-        <a href='javascript:goToURL("contact.html")'>Contact</a>
+        <a class='no_dec' href='javascript:goToURL("about.html")'>About</a>|
+        <a class='no_dec' href='javascript:goToURL("contact.html")'>Contact</a>
     </div>
     <h1 class='page_heading'>PROJECTS</h1>
 
