--- a/about.html
+++ b/about.html
@@ -9,14 +9,14 @@
 
 <body>
     <div id='page_select'>
-        <a href='javascript:goToURL("projects.html")'>Projects</a>|
-        <a href='javascript:goToURL("contact.html")'>Contact</a>
+        <a class='no_dec' href='javascript:goToURL("projects.html")'>Projects</a>|
+        <a class='no_dec' href='javascript:goToURL("contact.html")'>Contact</a>
     </div>
     <h1 class='page_heading'>ABOUT</h1>
     <span class='page_subhead'><a class='exlink' href='https://www.github.com/limekiller'>GitHub</a> | <a class='exlink' href='https://www.youtube.com/channel/UCjfpZEuhd5bzGf-TFdnCwpg'>YouTube</a></span>
     <div class='body_container'>
         <h1 class='body_heading' style='width:500px;'>Programming and Graphic Design</h1>
-        <p class='body_p'>I'm a full-stack developer currently pursuing a bachelor's in Computer Science and a minor in Graphic Design at Goshen College. I'm also a Systems Administrator at <a href='https://mennonite.net' >Mennonite.net</a>, a small web-hosting company in Goshen, IN focusing on churches and small organizations. Here are a few of the things I'm most proficient at:</p>
+        <p class='body_p'>I'm a full-stack developer currently pursuing a bachelor's in Computer Science and a minor in Graphic Design at <a href='https://goshen.edu'>Goshen College</a>. I'm also a Systems Administrator at <a href='https://mennonite.net' >Mennonite.net</a>, a small web-hosting company in Goshen, IN focusing on churches and small organizations. Here are a few of the things I'm most proficient at:</p>
         <div id='split-list'>
             <div class='split_list_part'>
                 <h1 style='font-size:50px;'>Languages</h1>
