--- a/contact.html
+++ b/contact.html
@@ -9,8 +9,8 @@
 
 <body>
     <div id='page_select'>
-        <a href='javascript:goToURL("about.html")'>About</a>|
-        <a href='javascript:goToURL("projects.html")'>Projects</a>
+        <a class='no_dec' href='javascript:goToURL("about.html")'>About</a>|
+        <a class='no_dec' href='javascript:goToURL("projects.html")'>Projects</a>
     </div>
     <h1 class='page_heading'>Contact</h1>
     <div class='body_container'>
