--- a/index.html
+++ b/index.html
@@ -12,20 +12,19 @@
     <script type="text/javascript" src="home.js"></script>
 </head>
 <body>
-    <div style='position:absolute;background-color:white;width:101%;line-height:45px;left:0;color:black;font-family:courier;text-align:center;height:50px;top:0;'>This site is currently under construction!</div>
 	<header id='home_container'>
         <h1 id='name'></h1>
 		<h1 style='color:black;'>BRYCE YODER</h1>
         <h5 id='subhead'>Programming and Graphic Design</h1>
-        <hr />
+        <hr id='home_hr'/>
 		<div id='home_menu'>
-            <span class='home-menu-item'><a href='about.html'>About</a></span>	
+            <span class='home-menu-item'><a class='no_dec' href='about.html'>About</a></span>	
             <span class='home-div-1'>|</span>
             <hr class='home-div-2' />
-            <span class='home-menu-item'><a href='projects.html'>Projects</a></span>	
+            <span class='home-menu-item'><a class='no_dec' href='projects.html'>Projects</a></span>	
             <span class='home-div-1'>|</span>
             <hr class='home-div-2' />
-            <span class='home-menu-item'><a href='contact.html'>Contact</a></span>	
+            <span class='home-menu-item'><a class='no_dec' href='contact.html'>Contact</a></span>	
 		</div>
 	</header>
 </body>
