Add projects and improve CSS

--- a/projects.html
+++ b/projects.html
@@ -160,6 +160,28 @@
 
         <div class='project'>
             <div style='width:100vw;height:500px;position:absolute;'></div>
+            <h1 class='body_heading' style='width:500px;'>flamenco</h1>
+            <p class='body_p'>A music player for Android that saves shuffles between uses. On every music player I've tried, if I press the shuffle button and then close and come back to the app, my music will get re-shuffled, and I'll end up hearing some songs again before hearing others. This app was made to fix that problem, and it contains a number of other useful features as well.</p>
+            <p style='position:relative;z-index:99;text-align:center;font-weight:bold;'><a target="_blank" href='https://www.github.com/limekiller/flamenco'>Check it out!</a></p>
+            <ul class='body_p' style='margin-top:20px;padding-bottom:50px;'><strong>Features:</strong>
+                <li>Save shuffles between uses</li>
+                <li>Supports songs and podcasts</li>
+                <li>Saves your exact song and position, and keeps it separate for podcasts and songs.</li>
+                <li>Gesture-based navigation</li>
+                <li>Detailed song-view for easy control</li>
+            </ul>
+            <div class='photo_container'onclick='spoiler(this)'>
+                <p class='photo_container_icon'>+</p>
+                <img src='./images/f1.jpg' />
+                <img src='./images/f2.jpg' />
+                <img src='./images/f3.jpg' />
+                <img src='./images/f4.jpg' />
+                <img src='./images/f5.jpg' />
+            </div>
+            <hr />
+        </div>
+        <div class='project'>
+            <div style='width:100vw;height:500px;position:absolute;'></div>
             <h1 class='body_heading' style='width:500px;'>Homeboard</h1>
             <p class='body_p'>An open-source Google-integrated dashboard for your home. I wanted a way to see all of my apartment-mates' schedules at once, and figured it was the perfect way to learn Flask. Homeboard is a webapp that allows you to login with your Google account, and displays your Calendar, Google Drive documents, breaking news headlines, local weather, and the time.</p>
             <p style='position:relative;z-index:99;text-align:center;font-weight:bold;'><a target="_blank" href='https://www.github.com/limekiller/homeboard'>Check it out!</a></p>
@@ -176,6 +198,7 @@
                 <img src='./images/hb1.png' />
                 <img src='./images/hb2.png' />
                 <img src='./images/hb3.png' />
+                <img src='./images/hb4.png' />
             </div>
             <hr />
         </div>
