--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
         <h5 id='subhead'>Programming and Graphic Design</h1>
         <hr id='home_hr'/>
 		<div id='home_menu'>
-            <span class='home-menu-item'><a class='no_dec' href='about.html'>About</a></span>	
+            <span class='home-menu-item'><a class='no_dec' href='javascript:goToURLHome("about.html")'>About</a></span>	
             <span class='home-div-1'>|</span>
             <hr class='home-div-2' />
-            <span class='home-menu-item'><a class='no_dec' href='projects.html'>Projects</a></span>	
+            <span class='home-menu-item'><a class='no_dec' href='javascript:goToURLHome("projects.html")'>Projects</a></span>	
             <span class='home-div-1'>|</span>
             <hr class='home-div-2' />
-            <span class='home-menu-item'><a class='no_dec' href='contact.html'>Contact</a></span>	
+            <span class='home-menu-item'><a class='no_dec' href='javascript:goToURLHome("contact.html")'>Contact</a></span>	
 		</div>
 	</header>
 </body>
